# NeuralStrike

./: .coverage  .env.example  .gitignore  BUG_CATALOG.md  CHANGELOG.md  Dockerfile  NEXT_STEPS.md  PRODUCTION_ROADMAP.md  README.md  SECURITY.md  USAGE.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
corpus/: phase5_real_incidents.yaml
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  report.test.ts  report.ts
dashboard/src/__fixtures__/: report.json  report.sarif
docs/: threat_model.md
src/neuralstrike/: __init__.py  main.py
src/neuralstrike.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/neuralstrike/adapters/: __init__.py  a2a.py  base.py  langgraph.py  langgraph_server.py  mcp_http.py  openai_endpoint.py
src/neuralstrike/attacks/: __init__.py  ascii_smuggling.py  indirect.py  mcp_implicit.py  mcp_poison.py  minja.py  rag_poison.py
src/neuralstrike/attacks/a2a/: __init__.py  card_tamper.py  delegation.py  spoofing.py
src/neuralstrike/attacks/adaptive/: __init__.py  base.py  crescendo.py  pair.py  tap.py
src/neuralstrike/core/: adversarial_loop.py  config.py  exceptions.py  llm_manager.py  runtime.py
src/neuralstrike/corpus/: __init__.py  loader.py
src/neuralstrike/corpus/data/: asi01-asi10.yaml  llm01-llm10.yaml
src/neuralstrike/defenses/: __init__.py  base.py  checkers.py  defenses.py  harness.py
src/neuralstrike/evaluation/: __init__.py  baseline.py  calibration.py  explain.py  probes.py  runner.py  scoring.py  statistics.py  verdict.py
src/neuralstrike/evasion/: mimicry.py  steganography.py
src/neuralstrike/identity/: __init__.py  base.py  did.py  jcs.py  jws.py  signatures.py
src/neuralstrike/integrations/: __init__.py  attack_chain.py  neuralguard.py
src/neuralstrike/modules/exploit/: agent_pivot.py  function_hijack.py  mcp_interceptor.py  model_extract.py
src/neuralstrike/modules/post_ex/: agent_c2.py  exfiltrator.py
src/neuralstrike/modules/recon/: llm_recon.py  tool_enum.py
src/neuralstrike/modules/weaponize/: context_poison.py  jailbreak_forge.py
src/neuralstrike/oracles/: __init__.py  base.py  canary.py  evidence.py  forbidden_tool.py  judge.py  predicate.py  schema.py  system_prompt.py  tool_harness.py
src/neuralstrike/packs/: __init__.py  base.py  cyberseceval.py  harmbench.py  jailbreakbench.py  local.py
src/neuralstrike/reports/: __init__.py  compliance.py  json_report.py  junit.py  markdown.py  model.py  pdf.py  readme_mapping.py  sarif.py
src/neuralstrike/runtime/: __init__.py  budget.py  drain.py  limits.py  retry.py
src/neuralstrike/safety/: __init__.py  safety.py
src/neuralstrike/scope/: __init__.py  scope.py
src/neuralstrike/transforms/: __init__.py  base.py  codecs.py
src/neuralstrike/utils/: __init__.py  logging.py  validation.py
tests/: conftest.py  test_a2a_attacks.py  test_adapters.py  test_adaptive.py  test_adaptive_cli.py  test_calibration.py  test_core.py  test_corpus.py  test_corpus_cli.py  test_defenses.py  test_evaluation.py  test_evaluation_cli.py  test_evasion.py  test_explain.py  test_exploit.py  test_identity.py  test_indirect.py  test_integrations_neuralguard.py  test_main.py  test_main_phase5.py  test_main_phase6_cli.py  test_mcp_implicit.py  test_mcp_interceptor.py  test_mcp_poison.py  test_minja_rag.py  test_oracle_honesty.py  test_oracles.py  test_packs.py  test_phase1_exit_gate.py  test_phase1_oracles.py  test_phase2_exit_gate.py  test_phase5_exit_gate.py  test_phase7_exit_gate.py  test_post_ex.py  test_recon.py  test_reports.py  test_runtime.py  test_safety.py  test_scan_cli.py  test_scope.py  (+4 more)
tests/fixtures/: __init__.py  langgraph_agent.py  mcp_server.py
tests/oracle_honesty_corpus/: __init__.py  cases.py
