[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralstrike"
version = "1.0.0"
description = "Adversarial AI orchestration framework — red-team toolkit for the autonomous-agent era."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = {text = "MIT"}
authors = [{name = "Agent Mackenzie", email = "aiagent.mackenzie@gmail.com"}]
keywords = ["security", "red-team", "llm", "prompt-injection", "mcp", "ai-safety"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
]
dependencies = [
    "litellm",
    "ollama>=0.4",
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx",
    "python-dotenv",
    "jsonschema>=4",
    "pyyaml>=6.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
mcp = ["uvicorn>=0.29", "fastapi>=0.110"]
langgraph = ["langgraph>=0.2", "typing_extensions>=4.10"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML>=6",
    "pip-audit>=2.7",
    "cyclonedx-bom>=4",
    "langgraph>=0.2",
    "typing_extensions>=4.10",
]

[project.scripts]
neuralstrike = "neuralstrike.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neuralstrike = ["py.typed", "corpus/data/*.yaml"]

[tool.ruff]
line-length = 110
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "PL", "RUF"]
ignore = [
    "PLR0913",  # too-many-arguments (CLI signatures are wide by nature)
    "PLR2004",  # magic-value-comparison (test fixtures use literals)
    "PLC0105",  # type-var-name-arity
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR0915", "PLR0912", "PLW0603", "PLR0911", "S101", "PLC0415", "E501", "RUF012"]
"src/neuralstrike/fixtures/langgraph_agent.py" = ["PLC0415"]  # optional langgraph imports
"src/neuralstrike/main.py" = ["PLC0415", "B008", "PLR0915", "PLR0912"]  # lazy imports + Typer's Option() default pattern
"src/neuralstrike/modules/exploit/mcp_interceptor.py" = ["PLC0415"]  # optional [mcp] extra, lazy import
"src/neuralstrike/corpus/loader.py" = ["PLC0415"]  # local oracle imports break a latent package cycle
"src/neuralstrike/evaluation/runner.py" = ["PLC0415"]  # local mint_canary import breaks a package cycle
"src/neuralstrike/identity/did.py" = ["PLC0415"]  # optional base58 import for did:key
"src/neuralstrike/identity/jws.py" = ["PLC0415"]  # optional cryptography imports
"src/neuralstrike/identity/signatures.py" = ["PLC0415"]  # optional cryptography imports
"src/neuralstrike/integrations/neuralguard.py" = ["PLC0415"]  # optional neuralguard in-process imports (mirrors [langgraph] extra pattern)
"src/neuralstrike/packs/__init__.py" = ["PLC0415"]  # pack classes registered via @register_pack at import; lazy AdversarialLoop import
"src/neuralstrike/packs/base.py" = ["PLC0415"]  # lazy httpx import keeps pack import side-effect-free
"src/neuralstrike/transforms/codecs.py" = ["RUF001", "RUF002", "RUF003"]  # homoglyph/braille tables use unicode lookalikes by design

[tool.ruff.lint.isort]
known-first-party = ["neuralstrike"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_redundant_casts = true
no_implicit_optional = true
files = ["src/neuralstrike"]

[[tool.mypy.overrides]]
module = ["litellm", "ollama", "jsonschema", "neuralguard", "neuralguard.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"